tests/negative/neg_pr116_mixed_named_end.safe
package neg_pr116_mixed_named_end

   function broken returns integer
      return 1
   end broken
